Updated http status codes and swagger doc
