# swagger.json
@@ -55,8 +55,14 @@
             }
           ],
           "responses": {
-            "405": {
-              "description": "Invalid input"
+            "200": {
+              "description": "Success"
+            },
+            "401": {
+              "description": "Missing parameters"
+            },
+            "402": {
+              "description": "Existing username"
             }
           }
         }
@@ -87,8 +93,17 @@
             }
           ],
           "responses": {
-            "405": {
-              "description": "Invalid input"
+            "200": {
+              "description": "Success",
+              "schema": {
+                "$ref": "#/definitions/AuthorizedUser"
+              }
+            },
+            "401": {
+              "description": "Missing parameters"
+            },
+            "403": {
+              "description": "Authentication failed"
             }
           }
         }
@@ -120,8 +135,8 @@
                 "$ref": "#/definitions/Profile"
               }
             },
-            "400": {
-              "description": "Invalid status value"
+            "404": {
+              "description": "Account not found"
             }
           }
         }
@@ -157,169 +172,37 @@
           }
         }
       },
-      "/store/order/{orderId}": {
-        "get": {
+      "/user": {
+        "delete": {
           "tags": [
-            "store"
+            "user"
           ],
-          "summary": "Find purchase order by ID",
-          "description": "For valid response try integer IDs with value >= 1 and <= 10.         Other values will generated exceptions",
-          "operationId": "getOrderById",
+          "summary": "Deletes account",
+          "description": "This can only be done by the logged in user.",
+          "operationId": "deleteUser",
           "produces": [
-            "application/xml",
             "application/json"
           ],
           "parameters": [
             {
-              "name": "orderId",
-              "in": "path",
-              "description": "ID of pet that needs to be fetched",
+              "in": "body",
+              "name": "body",
+              "description": "Username and password",
               "required": true,
-              "type": "integer",
-              "maximum": 10,
-              "minimum": 1,
-              "format": "int64"
+              "schema": {
+                "$ref": "#/definitions/Auth object"
+              }
             }
           ],
           "responses": {
             "200": {
-              "description": "successful operation",
+              "description": "Success",
               "schema": {
-                "$ref": "#/definitions/Order"
+                "$ref": "#/definitions/APIResponse"
               }
             },
             "400": {
-              "description": "Invalid ID supplied"
-            },
-            "404": {
-              "description": "Order not found"
-            }
-          }
-        },
-        "delete": {
-          "tags": [
-            "store"
-          ],
-          "summary": "Delete purchase order by ID",
-          "description": "For valid response try integer IDs with positive integer value.         Negative or non-integer values will generate API errors",
-          "operationId": "deleteOrder",
-          "produces": [
-            "application/xml",
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "name": "orderId",
-              "in": "path",
-              "description": "ID of the order that needs to be deleted",
-              "required": true,
-              "type": "integer",
-              "minimum": 1,
-              "format": "int64"
-            }
-          ],
-          "responses": {
-            "400": {
-              "description": "Invalid ID supplied"
-            },
-            "404": {
-              "description": "Order not found"
-            }
-          }
-        }
-      },
-      "/user": {
-        "post": {
-          "tags": [
-            "user"
-          ],
-          "summary": "Create user",
-          "description": "This can only be done by the logged in user.",
-          "operationId": "createUser",
-          "produces": [
-            "application/xml",
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "Created user object",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          ],
-          "responses": {
-            "default": {
-              "description": "successful operation"
-            }
-          }
-        }
-      },
-      "/user/createWithArray": {
-        "post": {
-          "tags": [
-            "user"
-          ],
-          "summary": "Creates list of users with given input array",
-          "description": "",
-          "operationId": "createUsersWithArrayInput",
-          "produces": [
-            "application/xml",
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "List of user object",
-              "required": true,
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/definitions/User"
-                }
-              }
-            }
-          ],
-          "responses": {
-            "default": {
-              "description": "successful operation"
-            }
-          }
-        }
-      },
-      "/user/createWithList": {
-        "post": {
-          "tags": [
-            "user"
-          ],
-          "summary": "Creates list of users with given input array",
-          "description": "",
-          "operationId": "createUsersWithListInput",
-          "produces": [
-            "application/xml",
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "List of user object",
-              "required": true,
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/definitions/User"
-                }
-              }
-            }
-          ],
-          "responses": {
-            "default": {
-              "description": "successful operation"
+              "description": "Account not found or invalid credentials"
             }
           }
         }
@@ -381,7 +264,28 @@
           },
           "password": {
             "type": "string",
-            "password": "secret123"
+            "example": "secret123"
+          }
+        }
+      },
+      "AuthorizedUser": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "example": "rsvpmx"
+          },
+          "first": {
+            "type": "string",
+            "example": "John"
+          },
+          "last": {
+            "type": "string",
+            "example": "Smith"
+          },
+          "picture": {
+            "type": "string",
+            "example": "https://i.imgur.com/FSgbIi4.png"
           }
         }
       },
